# nuggetsync

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/2025-11-24-180337-0000_create_baseuser/: down.sql  up.sql
migrations/2025-11-24-183814-0000_add_updated_at_to_profiles/: down.sql  up.sql
migrations/2025-11-30-013500_fix_id_sequence/: down.sql  up.sql
src/: main.rs  profilemodule.rs  schema.rs  usermodule.rs
src/utils/: db.rs  redis.rs
