[package]
name = "nuggetsync"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.7"
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
diesel = { version = "2.3.3", features = ["postgres", "r2d2", "chrono"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
redis = "0.27.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
async-trait = "0.1.83"
